--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "id": "72139fa7",
    "metadata": {},
    "outputs": [
@@ -1334,62 +1334,6 @@
        "      <td>-3.041738</td>\n",
        "      <td>-0.233863</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>548</th>\n",
-       "      <td>-0.347888</td>\n",
-       "      <td>-1.286204</td>\n",
-       "      <td>0.393735</td>\n",
-       "      <td>3.531850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>620</th>\n",
-       "      <td>-0.017632</td>\n",
-       "      <td>-3.004185</td>\n",
-       "      <td>-0.276865</td>\n",
-       "      <td>-0.150118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>743</th>\n",
-       "      <td>-0.017615</td>\n",
-       "      <td>0.603562</td>\n",
-       "      <td>3.180116</td>\n",
-       "      <td>-0.744630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>746</th>\n",
-       "      <td>2.493501</td>\n",
-       "      <td>-0.630036</td>\n",
-       "      <td>-3.779069</td>\n",
-       "      <td>0.219802</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>798</th>\n",
-       "      <td>-1.096912</td>\n",
-       "      <td>3.230697</td>\n",
-       "      <td>0.861535</td>\n",
-       "      <td>-0.305723</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>859</th>\n",
-       "      <td>-0.703307</td>\n",
-       "      <td>3.336181</td>\n",
-       "      <td>0.365890</td>\n",
-       "      <td>-0.020602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>933</th>\n",
-       "      <td>-0.083904</td>\n",
-       "      <td>-0.727028</td>\n",
-       "      <td>-1.072248</td>\n",
-       "      <td>3.425251</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>951</th>\n",
-       "      <td>-3.071231</td>\n",
-       "      <td>0.682712</td>\n",
-       "      <td>-0.535157</td>\n",
-       "      <td>-0.488071</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1400,18 +1344,10 @@
        "99  -0.667493  3.204264 -1.153757 -1.646057\n",
        "106  1.746588 -0.024185 -0.061824  3.111273\n",
        "333  0.332275 -1.243260  3.137531  0.364895\n",
-       "360 -0.498491 -0.208109 -3.041738 -0.233863\n",
-       "548 -0.347888 -1.286204  0.393735  3.531850\n",
-       "620 -0.017632 -3.004185 -0.276865 -0.150118\n",
-       "743 -0.017615  0.603562  3.180116 -0.744630\n",
-       "746  2.493501 -0.630036 -3.779069  0.219802\n",
-       "798 -1.096912  3.230697  0.861535 -0.305723\n",
-       "859 -0.703307  3.336181  0.365890 -0.020602\n",
-       "933 -0.083904 -0.727028 -1.072248  3.425251\n",
-       "951 -3.071231  0.682712 -0.535157 -0.488071"
+       "360 -0.498491 -0.208109 -3.041738 -0.233863"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1355,162 @@
    "source": [
     "#MORE OUTLIERS FOR A DATAFRAME\n",
     "\n",
-    "data_revised[(data_revised.abs() > 3).any(axis=\"columns\")]"
+    "data_revised[(data_revised.abs() > 3).any(axis=\"columns\")].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "454dd967",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0   1   2   3   4   5   6\n",
+      "0   0   1   2   3   4   5   6\n",
+      "1   7   8   9  10  11  12  13\n",
+      "2  14  15  16  17  18  19  20\n",
+      "3  21  22  23  24  25  26  27\n",
+      "4  28  29  30  31  32  33  34\n",
+      "[0 1 4 3 2]\n",
+      "    0   1   2   3   4   5   6\n",
+      "0   0   1   2   3   4   5   6\n",
+      "1   7   8   9  10  11  12  13\n",
+      "4  28  29  30  31  32  33  34\n",
+      "3  21  22  23  24  25  26  27\n",
+      "2  14  15  16  17  18  19  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#PERMUTATION AND RANDOM SAMPLING\n",
+    "\n",
+    "df_perm = pd.DataFrame(np.arange(5*7).reshape(5,7))\n",
+    "\n",
+    "print(df_perm)\n",
+    "\n",
+    "sampler = np.random.permutation(5)\n",
+    "\n",
+    "print(sampler)\n",
+    "\n",
+    "\n",
+    "print(df_perm.take(sampler))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "981dd13d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  key  data1\n",
+      "0   b      0\n",
+      "1   b      1\n",
+      "2   a      2\n",
+      "3   c      3\n",
+      "4   a      4\n",
+      "5   b      5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       a      b      c\n",
+       "0  False   True  False\n",
+       "1  False   True  False\n",
+       "2   True  False  False\n",
+       "3  False  False   True\n",
+       "4   True  False  False\n",
+       "5  False   True  False"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#DUMMIES?\n",
+    "\n",
+    "df_dummy = pd.DataFrame({\"key\":[\"b\",\"b\",'a',\"c\",\"a\",\"b\"], \"data1\": np.arange(6)})\n",
+    "\n",
+    "print(df_dummy)\n",
+    "\n",
+    "pd.get_dummies(df_dummy[\"key\"])\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
