--- a/DataTransformation.ipynb
+++ b/DataTransformation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "id": "b90e6353",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "6  two   4"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "id": "8b0a4748",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "id": "52d89322",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "5  two   4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "id": "83568d2c",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "6  two   4   6"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "4a0d1d4c",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "id": "ae3de704",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "8cbd3b4a",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
        "5  two   4   5"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "292e3023",
    "metadata": {},
    "outputs": [
@@ -551,7 +551,7 @@
        "7     pulled pork     9.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "id": "f465f9ae",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "7     pulled pork     9.0          9"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "id": "25dba67e",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "7     pulled pork     9.0          9    pork"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "id": "72565e56",
    "metadata": {},
    "outputs": [
@@ -891,7 +891,7 @@
        "7     pulled pork     9.0    pork"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "b586930e",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "76270573",
    "metadata": {},
    "outputs": [
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "id": "319e7249",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "New York    8    9     10    11"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "id": "fda102da",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
        "New York    8    9    10    11"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "8025aa55",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,21 +1193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "809a788c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-2.7699999999999996, -0.62]    250\n",
-       "(-0.62, -0.00022]               250\n",
-       "(-0.00022, 0.63]                250\n",
-       "(0.63, 4.01]                    250\n",
+       "(-3.2699999999999996, -0.64]    250\n",
+       "(-0.64, 0.037]                  250\n",
+       "(0.037, 0.7]                    250\n",
+       "(0.7, 2.93]                     250\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "id": "01e700d2",
    "metadata": {},
    "outputs": [
@@ -1234,15 +1234,14 @@
      "text": [
       "                 0            1            2            3\n",
       "count  1000.000000  1000.000000  1000.000000  1000.000000\n",
-      "mean     -0.035215     0.042965    -0.019156    -0.043720\n",
-      "std       1.018334     0.996212     0.989544     0.977896\n",
-      "min      -3.048780    -3.593412    -3.169206    -3.362316\n",
-      "25%      -0.736790    -0.638966    -0.657695    -0.661442\n",
-      "50%      -0.005457     0.029005    -0.047192    -0.070183\n",
-      "75%       0.696194     0.689002     0.644573     0.616606\n",
-      "max       3.137308     3.233057     2.988869     3.132944\n",
-      "576   -3.134903\n",
-      "646   -3.169206\n",
+      "mean     -0.003969    -0.019268    -0.000559     0.012118\n",
+      "std       1.011543     0.977235     0.980430     0.962325\n",
+      "min      -3.232783    -3.343852    -2.770663    -3.087695\n",
+      "25%      -0.677929    -0.674744    -0.691759    -0.615489\n",
+      "50%       0.031194    -0.017984     0.026407     0.036557\n",
+      "75%       0.639859     0.635165     0.687670     0.670863\n",
+      "max       3.666979     2.954595     3.001661     2.944752\n",
+      "741    3.001661\n",
       "Name: 2, dtype: float64\n"
      ]
     }
@@ -1265,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "id": "72139fa7",
    "metadata": {},
    "outputs": [
@@ -1298,39 +1297,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>-3.021124</td>\n",
-       "      <td>0.801791</td>\n",
-       "      <td>0.435805</td>\n",
-       "      <td>-0.278601</td>\n",
+       "      <th>244</th>\n",
+       "      <td>-3.232783</td>\n",
+       "      <td>0.645832</td>\n",
+       "      <td>0.370550</td>\n",
+       "      <td>-0.162223</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>0.902580</td>\n",
-       "      <td>-0.157928</td>\n",
-       "      <td>0.422087</td>\n",
-       "      <td>3.132944</td>\n",
+       "      <th>311</th>\n",
+       "      <td>-1.923047</td>\n",
+       "      <td>-3.251352</td>\n",
+       "      <td>-1.065081</td>\n",
+       "      <td>-0.482644</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>376</th>\n",
-       "      <td>1.304607</td>\n",
-       "      <td>0.137444</td>\n",
-       "      <td>0.289619</td>\n",
-       "      <td>-3.331671</td>\n",
+       "      <th>335</th>\n",
+       "      <td>-3.065012</td>\n",
+       "      <td>0.482128</td>\n",
+       "      <td>0.272162</td>\n",
+       "      <td>0.481696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>-0.982792</td>\n",
-       "      <td>-3.593412</td>\n",
-       "      <td>0.231993</td>\n",
-       "      <td>0.850559</td>\n",
+       "      <th>342</th>\n",
+       "      <td>-0.190110</td>\n",
+       "      <td>1.094343</td>\n",
+       "      <td>0.432614</td>\n",
+       "      <td>-3.087695</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>527</th>\n",
-       "      <td>0.163229</td>\n",
-       "      <td>-0.111914</td>\n",
-       "      <td>1.131166</td>\n",
-       "      <td>-3.362316</td>\n",
+       "      <th>435</th>\n",
+       "      <td>-1.686814</td>\n",
+       "      <td>-1.759036</td>\n",
+       "      <td>-0.103261</td>\n",
+       "      <td>-3.015892</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1338,14 +1337,14 @@
       ],
       "text/plain": [
        "            0         1         2         3\n",
-       "41  -3.021124  0.801791  0.435805 -0.278601\n",
-       "363  0.902580 -0.157928  0.422087  3.132944\n",
-       "376  1.304607  0.137444  0.289619 -3.331671\n",
-       "400 -0.982792 -3.593412  0.231993  0.850559\n",
-       "527  0.163229 -0.111914  1.131166 -3.362316"
+       "244 -3.232783  0.645832  0.370550 -0.162223\n",
+       "311 -1.923047 -3.251352 -1.065081 -0.482644\n",
+       "335 -3.065012  0.482128  0.272162  0.481696\n",
+       "342 -0.190110  1.094343  0.432614 -3.087695\n",
+       "435 -1.686814 -1.759036 -0.103261 -3.015892"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "id": "454dd967",
    "metadata": {},
    "outputs": [
@@ -1372,13 +1371,13 @@
       "2  14  15  16  17  18  19  20\n",
       "3  21  22  23  24  25  26  27\n",
       "4  28  29  30  31  32  33  34\n",
-      "[1 3 0 4 2]\n",
+      "[1 3 2 0 4]\n",
       "    0   1   2   3   4   5   6\n",
       "1   7   8   9  10  11  12  13\n",
       "3  21  22  23  24  25  26  27\n",
+      "2  14  15  16  17  18  19  20\n",
       "0   0   1   2   3   4   5   6\n",
-      "4  28  29  30  31  32  33  34\n",
-      "2  14  15  16  17  18  19  20\n"
+      "4  28  29  30  31  32  33  34\n"
      ]
     }
    ],
@@ -1399,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "981dd13d",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1492,7 @@
        "5  False   True  False"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1515,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "id": "1a26670c",
    "metadata": {},
    "outputs": [
@@ -1596,7 +1595,7 @@
        "5   False    True   False"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 53,
    "id": "ce194216",
    "metadata": {},
    "outputs": [
@@ -1615,11 +1614,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.88842172 0.49541476 0.35161653 0.71423037 0.50392912 0.22563761\n",
-      " 0.24497444 0.7928007  0.49517241 0.91509367]\n",
+      "[0.34993097 0.02133203 0.80673836 0.55030979 0.75048361 0.39263805\n",
+      " 0.67974687 0.91605239 0.25426769 0.30254372]\n",
       "\n",
       "\n",
-      "[(0.8, 1.0], (0.4, 0.6], (0.2, 0.4], (0.6, 0.8], (0.4, 0.6], (0.2, 0.4], (0.2, 0.4], (0.6, 0.8], (0.4, 0.6], (0.8, 1.0]]\n",
+      "[(0.2, 0.4], (0.0, 0.2], (0.8, 1.0], (0.4, 0.6], (0.6, 0.8], (0.2, 0.4], (0.6, 0.8], (0.8, 1.0], (0.2, 0.4], (0.2, 0.4]]\n",
       "Categories (5, interval[float64, right]): [(0.0, 0.2] < (0.2, 0.4] < (0.4, 0.6] < (0.6, 0.8] < (0.8, 1.0]]\n",
       "\n",
       "\n"
@@ -1657,41 +1656,41 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1705,9 +1704,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1715,24 +1714,24 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1740,19 +1739,19 @@
       ],
       "text/plain": [
        "   (0.0, 0.2]  (0.2, 0.4]  (0.4, 0.6]  (0.6, 0.8]  (0.8, 1.0]\n",
-       "0       False       False       False       False        True\n",
-       "1       False       False        True       False       False\n",
-       "2       False        True       False       False       False\n",
-       "3       False       False       False        True       False\n",
-       "4       False       False        True       False       False\n",
+       "0       False        True       False       False       False\n",
+       "1        True       False       False       False       False\n",
+       "2       False       False       False       False        True\n",
+       "3       False       False        True       False       False\n",
+       "4       False       False       False        True       False\n",
        "5       False        True       False       False       False\n",
-       "6       False        True       False       False       False\n",
-       "7       False       False       False        True       False\n",
-       "8       False       False        True       False       False\n",
-       "9       False       False       False       False        True"
+       "6       False       False       False        True       False\n",
+       "7       False       False       False       False        True\n",
+       "8       False        True       False       False       False\n",
+       "9       False        True       False       False       False"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "775a3696",
    "metadata": {},
    "outputs": [
@@ -1790,12 +1789,14 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "#EXTENSION DATA TYPE\n",
     "sample = pd.Series([1,2,3,None])\n",
     "\n",
     "sample"
@@ -1803,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 55,
    "id": "6b368821",
    "metadata": {},
    "outputs": [
@@ -1817,7 +1818,7 @@
        "dtype: Int64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,6 +1828,40 @@
     "\n",
     "sample_two\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "93e38d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_6443/3192195054.py:1: UserWarning: Instantiating StringDtype without any arguments.Pass a StringDtype instance to silence this warning.\n",
+      "  string_sample = pd.Series([\"a\", \"b\", \"c\"], dtype=pd.StringDtype)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0    a\n",
+       "1    b\n",
+       "2    c\n",
+       "dtype: string"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string_sample = pd.Series([\"a\", \"b\", \"c\"], dtype=pd.StringDtype)\n",
+    "\n",
+    "string_sample"
    ]
   }
  ],
