--- a/StringManipulation.ipynb
+++ b/StringManipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "e55193d8",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "297f27c8",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "1591c6b8",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "09ae9df3",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "82df4cb0",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "['a', 'a']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1a5b6611",
    "metadata": {},
    "outputs": [
@@ -136,18 +136,12 @@
      "output_type": "stream",
      "text": [
       "<class 'dict'>\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'dataS' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mSeries(data)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(data))\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdataS\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dataS' is not defined"
+      "<class 'pandas.core.series.Series'>\n",
+      "Dave     dave@google.com\n",
+      "Steve    steve@gmail.com\n",
+      "Rob       rob@google.com\n",
+      "Wes                  NaN\n",
+      "dtype: object\n"
      ]
     }
    ],
@@ -165,6 +159,128 @@
     "print(type(data))\n",
     "\n",
     "print(data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "20a0c74c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dave     False\n",
+       "Steve    False\n",
+       "Rob      False\n",
+       "Wes       True\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "da5d3a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dave     False\n",
+       "Steve    False\n",
+       "Rob      False\n",
+       "Wes        NaN\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "data.str.contains(\"Steve\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "04f71287",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dave     dave@google.com\n",
+      "Steve    steve@gmail.com\n",
+      "Rob       rob@google.com\n",
+      "Wes                  nan\n",
+      "dtype: object\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_as_string = data.astype(str)\n",
+    "\n",
+    "print(data_as_string)\n",
+    "print(type(data_as_string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ccc2852",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 7 6 4]\n",
+      " [4 8 0 6]\n",
+      " [2 0 5 9]\n",
+      " [7 7 7 7]]\n",
+      "   apples  oranges  pears  bananas\n",
+      "0       0        7      6        4\n",
+      "1       4        8      0        6\n",
+      "2       2        0      5        9\n",
+      "3       7        7      7        7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#  CATAGORICAL DATA\n",
+    "#NOTE THAT THE SEED NUMBER IS USED FOR REPRODUCIBILITY. IF I WANT TO USE THE SAME \"RANDOM\" NUMBERS \n",
+    "# AGAIN, I SHOULD USE THE SAME SEED NUMBER\n",
+    "\n",
+    "\n",
+    "fruits =['apples', 'oranges', 'pears', 'bananas']\n",
+    "\n",
+    "N = len(fruits)\n",
+    "\n",
+    "rng = np.random.default_rng(seed=42)\n",
+    "\n",
+    "\n",
+    "results_rng = rng.integers(0, 10, size=(N, 4))\n",
+    "\n",
+    "print(results_rng)\n",
+    "\n",
+    "results = pd.DataFrame(results_rng, columns=fruits)\n",
+    "\n",
+    "print(results)"
    ]
   }
  ],
